# workflows

./: .gitignore  AGENTS.md  README.md  go.mod  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/scripts/: bootstrap_neon.py  outbox_worker.py  priority_release_worker.py  publish_outbox.py  release_priority_tasks.py
apps/api/src/api/: auth.py  config.py  db.py  main.py  outbox_worker.py  priority_release_worker.py  realtime.py  runtime.py  runtime_schemas.py  workflow_schemas.py  workflows.py
apps/web/: .env.example  components.json  next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/users/: route.ts
apps/web/app/builder/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/operations/: page.tsx
apps/web/app/operations/instances/[instanceId]/: page.tsx
apps/web/app/project-implementation/: page.tsx
apps/web/app/sign-in/: page.tsx
apps/web/app/sign-up/: page.tsx
apps/web/components/: api-identity-panel.tsx  auth-card.tsx  runtime-console.tsx  sign-out-button.tsx  workflow-builder.tsx  workflow-instance-detail-screen.tsx  workflow-instance-graph.tsx  workflow-preview.tsx
apps/web/lib/: auth-client.ts  auth.ts  public-env.ts  server-env.ts
apps/web/scripts/: insert_workflow.mjs  seed-test-users.mjs
docs/: async-workflow-engine-plan.md
infra/: docker-compose.yml
infra/postgres/init/: 01_foundation.sql
