[project]
name = "api"
version = "0.1.0"
description = "FastAPI foundation for the async workflow engine"
readme = "README.md"
authors = [
    { name = "Cursor Agent", email = "cursoragent@cursor.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
